--- a/Pipfile
+++ b/Pipfile
@@ -1,20 +1,25 @@
 [[source]]
+name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-name = "pypi"
-
-[packages]
-pandas = "*"
-pyqt5 = "*"
-pysqlite3 = "*"
-xlsxwriter = "*"
-numpy = "*"
-numexpr = "*"
 
 [dev-packages]
+pycodestyle = "*"
+autopep8 = "*"
+
+[packages]
+robotframework = "*"
+robotframework-debuglibrary = "*"
+robotframework-seleniumlibrary = "*"
+selenium = "*"
+hvac = "*"
+rpaframework = "*"
+mongoengine = "==0.22.1"
+pandas = "*"
+xlsxwriter = "*"
 
 [requires]
-python_version = "3.9"
+python_version = "3.8"
 
 [scripts]
-main = "python main.py"
+robot ="robot -V Variables/config.py -d Outputs --loglevel INFO -P ./ Tasks/consulta_cnpj.robot"
