--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
-# These are some examples of commonly ignored file patterns.
-# You should customize this list as applicable to your project.
-# Learn more about .gitignore:
-#     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
-# Node artifact files
 node_modules/
 dist/
 
-# Compiled Java class files
-*.class
-
-# Compiled Python bytecode
 *.py[cod]
 
 # Log files
@@ -55,6 +46,7 @@ workspace.code-workspace
 report.html
 log.html
 output.xml
+*.png
 .vscode/atalhos.code-snippets
 *.code-workspace
 
